--- a/FrontEnd/adminDashboard.html
+++ b/FrontEnd/adminDashboard.html
@@ -350,47 +350,33 @@
       <h1>Customers</h1>
       <div class="row ">
         <div class="col-5">
-          <form id="fromCustomer">
-            <div class="row mt-4">
-              <div class="col">
-                <label for="txtcus_nic">NIC Number</label>
-                <input type="text" class="form-control" id="txtcus_nic" name="txtcus_nic" placeholder="200023563389">
-              </div>
-              <div class="col">
-                <label for="txtcus_name">Name</label>
-                <input type="text" class="form-control" id="txtcus_name" name="txtcus_name" placeholder="Pasan Kumara">
-              </div>
+          <form id="fromCustomer" enctype="multipart/form-data">
+            <div class="form-group">
+              <label for="cus_nic">NIC Number:</label>
+              <input type="text" class="form-control" id="cus_nic" name="cus_nic" required>
             </div>
-            <div class="row mt-4">
-              <div class="col">
-                <label for="txtcus_address">Address</label>
-                <input type="text" class="form-control" id="txtcus_address" name="txtcus_address" placeholder="721/C, Galle.">
-              </div>
+            <div class="form-group">
+              <label for="cus_name">Name:</label>
+              <input type="text" class="form-control" id="cus_name" name="cus_name" required>
             </div>
-            <div class="row mt-4">
-              <div class="col">
-                <label for="txtcus_contact">Contact Number</label>
-                <input type="text" class="form-control" id="txtcus_contact" name="txtcus_contact" placeholder="0712345678">
-              </div>
-              <div class="col">
-                <label for="txtcus_email">Address</label>
-                <input type="text" class="form-control" id="txtcus_email" name="txtcus_email" placeholder="example@email.com">
-              </div>
+            <div class="form-group">
+              <label for="cus_address">Address:</label>
+              <input type="text" class="form-control" id="cus_address" name="cus_address" required>
             </div>
-            <div class="form-group row mt-4">
-              <div class="col">
-                <label for="img_nic">NIC Image</label>
-                <input type="file" class="form-control-file" id="img_nic">
-                <small>Upload a valid NIC or Driving License</small>
-              </div>
-              <div class="col btn-group">
-                <button class="btn btn-success" type="button" id="btnSaveCus">Save</button>
-                <button class="btn btn-warning" type="button" id="btnUpdateCus">Update</button>
-                <button class="btn btn-danger" type="button" id="btnDeleteCus">Delete</button>
-              </div>
+            <div class="form-group">
+              <label for="cus_contact">Contact Number:</label>
+              <input type="text" class="form-control" id="cus_contact" name="cus_contact" required>
             </div>
+            <div class="form-group">
+              <label for="cus_email">Email:</label>
+              <input type="email" class="form-control" id="cus_email" name="cus_email" required>
+            </div>
+            <div class="form-group">
+              <label for="cus_img">NIC Image:</label>
+              <input type="file" class="form-control-file" id="cus_img" name="cus_img" accept="image/*" required>
+            </div>
+            <button type="button" class="btn btn-primary" id="btnSaveCus">Save</button>
           </form>
-
         </div>
 
 
@@ -510,7 +496,7 @@
 
 <script>
 
-  let baseURL = "http://localhost:8080/easycar/"
+  let baseURL = "http://localhost:8080/BackEnd_war/"
 
   $("#dashboardNav").click(function (){
     $("#dashboardPage").css("display" , "block");
@@ -547,11 +533,11 @@
       let cusContact = $(this).children(":eq(4)").text();
       let cusEmail = $(this).children(":eq(5)").text();
 
-      $('#txtcus_nic').val(cusNic);
-      $('#txtcus_name').val(cusName);
-      $('#txtcus_address').val(cusAddress);
-      $('#txtcus_contact').val(cusContact);
-      $('#txtcus_email').val(cusEmail);
+      $('#cus_nic').val(cusNic);
+      $('#cus_name').val(cusName);
+      $('#cus_address').val(cusAddress);
+      $('#cus_contact').val(cusContact);
+      $('#cus_email').val(cusEmail);
     });
 
     $("#tblCar>tr").click(function (){
@@ -593,9 +579,9 @@
     let formCusData = $("#fromCustomer").serialize();
     $.ajax({
       url: baseURL+"customer",
+      enctype: "multipart/form-data",
       method:"post",
       data: formCusData,
-      dataType: "json",
       success: function (res){
         alert("Success "+res.toString());
         console.log("Success : "+res)
