--- a/FrontEnd/testing.html
+++ b/FrontEnd/testing.html
@@ -12,48 +12,44 @@
 </head>
 
 <body>
-<div class="container">
-  <h1>Admin Dashboard</h1>
-  <div class="row">
-    <div class="col-md-3">
-      <div class="card text-white bg-primary mb-3">
-        <div class="card-body">
-          <h5 class="card-title">Cars</h5>
-          <p class="card-text">Total number of cars in the system: 50</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-3">
-      <div class="card text-white bg-success mb-3">
-        <div class="card-body">
-          <h5 class="card-title">Customers</h5>
-          <p class="card-text">Total number of customers in the system: 100</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-3">
-      <div class="card text-white bg-warning mb-3">
-        <div class="card-body">
-          <h5 class="card-title">Drivers</h5>
-          <p class="card-text">Total number of drivers in the system: 25</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-3">
-      <div class="card text-white bg-danger mb-3">
-        <div class="card-body">
-          <h5 class="card-title">Bookings</h5>
-          <p class="card-text">Total number of bookings in the system: 200</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<form id="image-upload-form" method="post" enctype="multipart/form-data">
+  <input type="file" name="image" id="image-input">
+  <button type="submit" id="image-upload-button">Upload</button>
+</form>
 
 
 <!-- jQuery and Bootstrap Bundle (includes Popper) -->
 <script src="assets/js/jquery-3.6.1.min.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
+
+<script>
+
+  let baseURL = "http://localhost:8080/BackEnd_war/"
+
+  $(document).ready(function() {
+    $("#image-upload-form").submit(function(event) {
+      event.preventDefault(); // prevent default form submission
+
+      // create a FormData object to store the image data
+      var formData = new FormData(this);
+
+      // send the image data to the server using AJAX
+      $.ajax({
+        url: baseURL+"/uploadImage",
+        type: "POST",
+        data: formData,
+        processData: false,
+        contentType: false,
+        success: function(data) {
+          // handle success response
+        },
+        error: function(xhr, status, error) {
+          // handle error response
+        }
+      });
+    });
+  });
+</script>
 </body>
 
 </html>
