Change Buttons in Customer Form

--- a/FrontEnd/adminDashboard.html
+++ b/FrontEnd/adminDashboard.html
@@ -375,7 +375,9 @@
               <label for="cus_img">NIC Image:</label>
               <input type="file" class="form-control-file" id="cus_img" name="cus_img" accept="image/*" required>
             </div>
-            <button type="button" class="btn btn-primary" id="btnSaveCus">Save</button>
+            <button type="button" class="btn btn-success" id="btnSaveCus">Save</button>
+            <button type="button" class="btn btn-warning" id="btnUpdateCus">Update</button>
+            <button type="button" class="btn btn-danger" id="btnDeleteCus">Remove</button>
           </form>
         </div>
 
