--- a/FrontEnd/adminDashboard.html
+++ b/FrontEnd/adminDashboard.html
@@ -225,7 +225,7 @@
             <label for="imgCar">Car Image</label>
             <input type="file" class="form-control-file" id="imgCar" name="imgCar">
           </div>
-          <div class="col-3 btn-group">
+          <div class="col-3">
             <button class="btn btn-success" type="button" id="btnSaveCar">Save</button>
             <button class="btn btn-warning" type="button" id="btnUpdateCar">Update</button>
             <button class="btn btn-danger" type="button" id="btnDeleteCar">Delete</button>
@@ -350,7 +350,7 @@
       <h1>Customers</h1>
       <div class="row ">
         <div class="col-5">
-          <form id="fromCustomer" enctype="multipart/form-data">
+          <form id="fromCustomer">
             <div class="form-group">
               <label for="cus_nic">NIC Number:</label>
               <input type="text" class="form-control" id="cus_nic" name="cus_nic" required>
@@ -363,14 +363,16 @@
               <label for="cus_address">Address:</label>
               <input type="text" class="form-control" id="cus_address" name="cus_address" required>
             </div>
-            <div class="form-group">
-              <label for="cus_contact">Contact Number:</label>
-              <input type="text" class="form-control" id="cus_contact" name="cus_contact" required>
-            </div>
-            <div class="form-group">
+            <div class="row">
+              <div class="col form-group">
+                <label for="cus_contact">Contact Number:</label>
+                <input type="text" class="form-control" id="cus_contact" name="cus_contact" required>
+              </div>
+              <div class="col form-group">
               <label for="cus_email">Email:</label>
               <input type="email" class="form-control" id="cus_email" name="cus_email" required>
-            </div>
+            </div></div>
+
             <div class="form-group">
               <label for="cus_img">NIC Image:</label>
               <input type="file" class="form-control-file" id="cus_img" name="cus_img" accept="image/*" required>
@@ -428,28 +430,36 @@
       <h1>Drivers</h1>
       <div class="row ">
         <div class="col-4">
-          <form>
+          <form id="formDriver">
             <div class="row mt-4">
               <div class="col">
-                <label for="txtdr_lic">License Number</label>
-                <input type="text" class="form-control" id="txtdr_lic" placeholder="B12345678">
+                <label for="dr_lic">License Number</label>
+                <input type="text" class="form-control" id="dr_lic" name="dr_lic" placeholder="B12345678">
               </div>
               <div class="col">
-                <label for="txtdr_name">Name</label>
-                <input type="text" class="form-control" id="txtdr_name" placeholder="Pasan Kumara">
+                <label for="dr_name">Name</label>
+                <input type="text" class="form-control" id="dr_name" name="dr_name" placeholder="Pasan Kumara">
               </div>
             </div>
             <div class="row mt-4">
               <div class="col">
-                <label for="txtdr_contact">Contact Number</label>
-                <input type="text" class="form-control" id="txtdr_contact" placeholder="0712345678">
+                <label for="dr_contact">Contact Number</label>
+                <input type="text" class="form-control" id="dr_contact" name="dr_contact" placeholder="0712345678">
+              </div>
+              <div class="col">
+                <label for="dr_avail">Availability</label>
+                <select class="form-control" id="dr_avail" name="dr_avail">
+                <option value="Yes">Yes</option>
+                <option value="No">No</option>
+              </select>
+
               </div>
             </div>
             <div class="form-group row mt-4">
-              <div class="col-3 btn-group">
-                <button class="btn btn-success">Save</button>
-                <button class="btn btn-warning">Update</button>
-                <button class="btn btn-danger">Delete</button>
+              <div class="col">
+                <button class="btn btn-success" type="button" id="btnSaveDr" >Save</button>
+                <button class="btn btn-warning" id="btnUpdateDr" >Update</button>
+                <button class="btn btn-danger" id="btnDeleteDr" >Delete</button>
               </div>
             </div>
           </form>
@@ -463,7 +473,6 @@
           <table class="table shadow">
             <thead class="thead-dark">
             <tr>
-              <th scope="col">Id</th>
               <th scope="col">License Number</th>
               <th scope="col">Name</th>
               <th scope="col">Contact</th>
@@ -472,18 +481,16 @@
             </thead>
             <tbody id="tblDriver">
             <tr>
-              <td>DR-001</td>
               <td>B3203389</td>
               <td>Saman Kumara</td>
               <td>0788899144</td>
               <td>Yes</td>
             </tr>
             <tr>
-              <td>DR-002</td>
               <td>B1324568</td>
               <td>Sadun Widuranga</td>
               <td>0713284658</td>
-              <td>Yes</td>
+              <td>No</td>
             </tr>
             </tbody>
           </table>
@@ -564,37 +571,83 @@
     });
 
   $("#tblDriver>tr").click(function () {
-    let drId = $(this).find("td:eq(0)").text();
-    let drLic = $(this).find("td:eq(1)").text();
-    let drName = $(this).find("td:eq(2)").text();
-    let drContact = $(this).find("td:eq(3)").text();
-    let drAvail = $(this).find("td:eq(4)").text();
+    let drLic = $(this).find("td:eq(0)").text();
+    let drName = $(this).find("td:eq(1)").text();
+    let drContact = $(this).find("td:eq(2)").text();
+    let drAvail = $(this).find("td:eq(3)").text();
 
 
-    $('#txtdr_lic').val(drLic);
-    $('#txtdr_name').val(drName);
-    $('#txtdr_contact').val(drContact);
+    $('#dr_lic').val(drLic);
+    $('#dr_name').val(drName);
+    $('#dr_contact').val(drContact);
+    $('#dr_avail').val(drAvail);
 
   });
 
-  $("#btnSaveCus").click(function (){
-    let formCusData = $("#fromCustomer").serialize();
+  // Driver
+  $("#btnSaveDr").click(function (){
+    let formDrData = $("#formDriver").serialize();
+
     $.ajax({
-      url: baseURL+"customer",
-      enctype: "multipart/form-data",
+      url: baseURL+"driver",
       method:"post",
-      data: formCusData,
+      data: formDrData,
+      dataType: "json",
       success: function (res){
-        alert("Success "+res.toString());
-        console.log("Success : "+res)
+        alert(res.state+" : "+res.message);
+        console.log("Success : "+res.message)
+        // uploadimg();
       },
       error: function (err){
-        alert("Error" +err.toString());
-        console.log("Error : "+err)
+        alert(err.state+" : "+err.message);
+        console.log("Error : "+err.message)
       }
     });
   });
 
+  //Customer
+  $("#btnSaveCus").click(function (){
+    let formCusData = $("#fromCustomer").serialize();
+
+    let cus_nic = $("#cus_nic").val();
+    let cus_name = $("#cus_name").val();
+    let cus_address = $("#cus_address").val();
+    let cus_contact = $("#cus_contact").val();
+    let cus_email = $("#cus_email").val();
+
+    let file = $("#cus_img")[0].files[0];
+
+    var formData = new FormData();
+
+    formData.append('cus_nic', cus_nic);
+    formData.append('cus_name', cus_name);
+    formData.append('cus_address', cus_address);
+    formData.append('cus_contact', cus_contact);
+    formData.append('cus_email', cus_email);
+    formData.append('cus_img', file);
+
+    console.log(cus_nic);
+
+    $.ajax({
+      url: baseURL+"customer",
+      method: 'post',
+      processData: false,
+      contentType: false,
+      data: formData,
+      success: function (res){
+        alert(res.state+" : "+res.message);
+        console.log("Success : "+res.message)
+        // uploadimg();
+      },
+      error: function (err){
+        alert(err.state+" : "+err.message);
+        console.log("Error : "+err.message)
+      }
+    });
+  });
+
+
+  //Car
   $("#btnSaveCar").click(function (){
     let formCarData = $("#formCar").serialize();
     $.ajax({
