--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -93,6 +93,15 @@
             color: white;
         }
 
+        .car-cards{
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+
+            grid-auto-rows: auto;
+
+            grid-gap: 1rem;
+        }
+
 
     </style>
 
@@ -257,8 +266,8 @@
 
 <!--CarList-->
 <div class="container-fluid d-flex justify-content-center" id="cars">
-    <div class="row mt-4 ">
-        <div class="col-sm-3 mb-4">
+    <div class="mt-4 car-cards">
+        <div class=" mb-4">
             <div class="card">
                 <img src="assets/images/Genaral/alto-m/1.png" class="card-img-top" width="100%">
                 <div class="card-body pt-0 px-0">
@@ -309,7 +318,7 @@
 
 <!--        Card 2-->
 
-        <div class="col-sm-3 mb-4">
+        <div class=" mb-4">
             <div class="card">
                 <img src="assets/images/Genaral/alto-m/2.png" class="card-img-top" width="100%">
                 <div class="card-body pt-0 px-0">
@@ -359,7 +368,7 @@
         </div>
 
 <!--        card 3-->
-        <div class="col-sm-3 mb-4">
+        <div class=" mb-4">
             <div class="card">
                 <img src="assets/images/Genaral/alto-m/3.png" class="card-img-top" width="100%">
                 <div class="card-body pt-0 px-0">
@@ -409,7 +418,7 @@
         </div>
 
 <!--        Card 4-->
-        <div class="col-sm-3 mb-4">
+        <div class=" mb-4">
             <div class="card">
                 <img src="assets/images/Genaral/alto-m/4.png" class="card-img-top" width="100%">
                 <div class="card-body pt-0 px-0">
@@ -456,6 +465,7 @@
                 </div>
             </div>
                 </div>
+
 
         </div>
             </div>
